Fix styling issues
- Remove the gap between the top of the browser and the header card
- Remove the scrollbar that appears in the background when clicking on a
table or reference modal
- Add JavaScript in the template files that hides the sidebar on load
for small screen sizes. Currently untested on actual mobile devices.

--- a/src/generate_new_site/assets/css/styles.css
+++ b/src/generate_new_site/assets/css/styles.css
@@ -5,7 +5,17 @@ html, body {
 .card-header {
   font-family: 'Lithos Pro';
   background-color: #202151 !important;
-  border-radius: 0;
+  border-radius: 0 !important;
+}
+
+/* Remove gap between header and top of the browser */
+#h-card {
+  border: 0;
+}
+
+/* Remove extra scrollbar that appears when opening a modal */
+body.modal-open {
+  padding-right: 0 !important;
 }
 
 .mb-0 {
